@@ -1,3 +1,8 @@
+2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* sdas/linksrc/lkarea.c:
+	  Set sane default values for gbz80 banks.
+
 2020-07-22 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* support/regression/tests/memory.c:
